--- a/open lab notebook/May_2018.md
+++ b/open lab notebook/May_2018.md
@@ -1,11 +1,14 @@
 1st week
-- I tried to focues on writing and graphics design, but encountered several distractions prolonging the process
+- I tried to focues on writing and graphics design, but encountered several distractions prolonging the process.
 - I finalized time series correlations and on Friday discussed different versions of N-PLS with José. We picked a reduced model,
 risiking that limited results that only encompass ROIs could end up the same as the input, threreby just re-affirming the ROIs 
-to be most relevant regions. Still, in regards to the research question, as to how alpha and theta signatures load on different
-voxel in the PFC and parietal cortex, we decided to focus on these regions and, thus, limit interpretations
+to be most relevant regions. Still, in regards to the research question, as to how alpha and theta signatures load on different.
+voxel in the PFC and parietal cortex, we decided to focus on these regions and, thus, limit interpretations.
 
 2nd week
-- On Thursday, I send my final draft of the master thesis to all my instructors and teachers. The PDF and Word file are now
-uploaded
+- All graphics were finished by Wednesday morning and all texts by Wednesday evening. I added supplementary data results as 
+appendices or uploaded them. For some results I still need to refine codes and annotations, so others in my lab who are
+planning to use EEG-fMRI can re-use them.
+_ I ran into a few formating issues when in exported the Word file to PDF, which kept me busy until Thursday
+- On Thursday, I resolved most of the formating issues and send my final draft of the master thesis to all my instructors and teachers. The PDF and Word file are now uploaded.
 - Friday, I printed the thesis and handed it in.
