--- a/open lab notebook/May_2018.md
+++ b/open lab notebook/May_2018.md
@@ -6,6 +6,9 @@ to be most relevant regions. Still, in regards to the research question, as to h
 voxel in the PFC and parietal cortex, we decided to focus on these regions and, thus, limit interpretations.
 
 2nd week
+- In the group meeting on Tuesday I gave my final results presentation limited to the most recent or those necessary to
+understand the progression of data fusion approaches applied in this thesis. Afterwards, I integrated as much of the last
+feedback from the group as possible in my Limitations and Conlusions sections. However, I was pre-occupied for most of the afternoon with work in the Psychology Department.
 - All graphics were finished by Wednesday morning and all texts by Wednesday evening. I added supplementary data results as 
 appendices or uploaded them. For some results I still need to refine codes and annotations, so others in my lab who are
 planning to use EEG-fMRI can re-use them.
