--- a/open lab notebook/May_2018.md
+++ b/open lab notebook/May_2018.md
@@ -4,6 +4,8 @@
 risiking that limited results that only encompass ROIs could end up the same as the input, threreby just re-affirming the ROIs 
 to be most relevant regions. Still, in regards to the research question, as to how alpha and theta signatures load on different.
 voxel in the PFC and parietal cortex, we decided to focus on these regions and, thus, limit interpretations.
+- For figures depicting N-PLS atom weights for alpha and theta, first, I was wondering how to best move the data from R to
+Python or if it might be even more efficient to use existing R packages for MRI data. However, these weren't entirely convincing and I decided that I had more freedom in handling and processing data to plot them in Python. Then, I was uncertain as to whether it was necessary to transform atom weights to t-maps or if it was sufficient to treat them as "common" ICA weights and plot them with nilearn. I decided to go with atom weights, since these provided what was needed to adequately interpret results and I doubted how well a t-map could convey what was represented in loadings of different signatures of an atom.
 
 2nd week
 - In the group meeting on Tuesday I gave my final results presentation limited to the most recent or those necessary to
