--- a/open lab notebook/May_2018.md
+++ b/open lab notebook/May_2018.md
@@ -17,3 +17,7 @@ planning to use EEG-fMRI can re-use them.
 _ I ran into a few formating issues when in exported the Word file to PDF, which kept me busy until Thursday
 - On Thursday, I resolved most of the formating issues and send my final draft of the master thesis to all my instructors and teachers. The PDF and Word file are now uploaded.
 - Friday, I printed the thesis and handed it in.
+
+3rd week
+- After handing in my thesis, I still wanted to have another look at it when a few days passed and found a lot of mistakes and inconsistencies (and uploaded a corrected version).
+- For the most part of the past week, I was preoccupied with re-writing large parts of my second psychology book for the final editing stages, selecting my courses for first semester at the CMBN and other preparations.
