--- a/open lab notebook/June_2018.md
+++ b/open lab notebook/June_2018.md
@@ -8,3 +8,9 @@ this repo, the descriptions in my thesis and also analyses need revision (record
 of multimodal data fusion and further research into N-PLS).
 - However, due to my departure from Germany coming soon and another paper with higher priority still pending, these 
 revisions will take more time.
+
+4th week
+- As last week, I kept working on updating my repo for my thesis, cleaning code and making everything a little more
+comprehensible.
+- Next to my master's repo I expanded my MPP for EEG repo and added a script for electrodermal activity and respiratory channels.
+- Revisions are still on hold.
