--- a/open lab notebook/June_2018.md
+++ b/open lab notebook/June_2018.md
@@ -11,6 +11,7 @@ revisions will take more time.
 
 4th week
 - As last week, I kept working on updating my repo for my thesis, cleaning code and making everything a little more
-comprehensible.
+comprehensible. I might have pushed a little carelessly during a couple of months, so there is more work to do on
+general transparency and annotation of the repo.
 - Next to my master's repo I expanded my MPP for EEG repo and added a script for electrodermal activity and respiratory channels.
 - Revisions are still on hold.
